--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,9 @@ baseten = [
     "openai>=1.51.0",
     "aiohttp>=3.10.5"
 ]
+llamafile_remote = [
+    "openai>=1.51.0",
+]
 
 [project.urls]
 Homepage = "https://github.com/flowaicom/flow-judge"
